--- a/MIST143_Traveler/Views/Shopping/PayData.cshtml
+++ b/MIST143_Traveler/Views/Shopping/PayData.cshtml
@@ -102,13 +102,16 @@
                             <div class="infoBoxOuter">
                                 <div class="infoBoxInner">
                                     <div class="payUserRow">
-                                        <div class="payUser active">
-                                            @Model.MemberName
+                                        <div class="payUserBlock">
+                                            <div class="payUser active">
+                                                @Model.MemberName
+                                            </div>
                                         </div>
                                         <div class="payUser" data-bs-toggle="modal" data-bs-target="#contentModal">
                                             + 新增
                                         </div>
                                     </div>
+                                   
                                     <div class="userInfoBox">
                                         <div class="leftUserInfoBox">
                                             <div>姓名</div>
@@ -138,6 +141,7 @@
                                 <input type="hidden" asp-for="MemberName" value="@Model.MemberName" />
                                 <input type="hidden" asp-for="Email" value="@Model.Email" />
                                 <input type="hidden" asp-for="Phone" value="@Model.Phone" />
+                                 <input type="text" class="memberNameInput" value="" />
                                 @for (int i = 0; i < Model._CShoppingCartDetailViewModel.Count; i++)
                                 {
                                     <input type="hidden" asp-for="_CShoppingCartDetailViewModel[i].TravelProductId" value="@Model._CShoppingCartDetailViewModel[i].TravelProductId" />
@@ -229,13 +233,13 @@
                 <div class="modal-content">
                     <button type="button" class="btn-close modalClose " data-bs-dismiss="modal"
                             aria-label="Close"></button>
-                    <div class="infoTitle mt-4">編輯參加人資料</div>
+                    <div class="infoTitle mt-4">新增參加人資料</div>
                     <div class="border-bottom-line"></div>
                     <div class="modal-body">
 
                         <div class="mb-3">
                             <label class="col-form-label">姓名:<span class="color-main"> *</span></label>
-                            <input type="text" class="form-control" value="@Model.MemberName">
+                            <input type="text" class="form-control addName"  value="">
 
                         </div>
                         <div class="mb-3">
@@ -244,7 +248,7 @@
                                     *
                                 </span>
                             </label>
-                            <input type="text" class="form-control" value="@Model.Phone">
+                            <input type="text" class="form-control" value="">
                         </div>
                         <div class="mb-3">
                             <label class="col-form-label">
@@ -252,12 +256,12 @@
                                     *
                                 </span>
                             </label>
-                            <input type="text" class="form-control" value="@Model.Email">
+                            <input type="text" class="form-control" value="">
                         </div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
-                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">儲存</button>
+                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="saveBtn">儲存</button>
                     </div>
                 </div>
             </div>
@@ -267,4 +271,16 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+<script>
+        $('#saveBtn').click(function () {
+            let newName = $('.addName').val()
+            $('.addName').val("")
+            console.log("newName", newName)
+            let oldHtml = $('.payUserBlock').html()
+            $('.payUserBlock').html(oldHtml + `<div class='payUser active'>${newName}</div>`)
+            let oldInputValue = $(".memberNameInput").val()
+            let newInputValue = oldInputValue === "" ? newName : `、${newName}`
+            $(".memberNameInput").val(`${oldInputValue}${newInputValue}`)
+        })
+</script>
 }
