--- a/MIST143_Traveler/Views/CustomerCenter/OrderDE.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/OrderDE.cshtml
@@ -14,7 +14,7 @@
         <thead>
             <tr>
                 <th>
-                    編號
+                    訂單號
                 </th>
                 <th>
                     景點
