--- a/MIST143_Traveler/Views/Shared/Components/CustomerOrder/Default.cshtml
+++ b/MIST143_Traveler/Views/Shared/Components/CustomerOrder/Default.cshtml
@@ -55,54 +55,56 @@
         </tr>
     </thead>
     <tbody id="訂單編號">
-        @foreach (var item in Model)
-        {
+        @{
+            int count = 0;
+            @foreach (var item in Model)
+            {
+                count++;
+                <tr class="樣式">
+                    <td>
+                        @count
+                    </td>
+                    <td>
+                        <a type="button" data-bs-toggle="modal" data-bs-target="#ORD" onclick="Odd('@Url.Action("OrderDE", "CustomerCenter", new {id=item.訂單編號 }, Context.Request.Scheme)',null)">@Html.DisplayFor(modelItem => item.商品名稱)</a>
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.訂購日期)
+                    </td>
+                    <td>
 
+                        @Convert.ToInt32(item.購買金額 * item.數量)
+                    </td>
+                    <td class="statuss" id="stat" value="@item.訂單狀態">
+                        @Html.DisplayFor(modelItem => item.訂單狀態)
+                    </td>
+                    @{
+                        if (item.訂單狀態 == "訂單完成" && item.評論狀態 <= 0)
+                        {
+                            <td>
+                                <a class="btn btn-outline-success rv" id="@item.訂單編號" data-bs-toggle="modal" data-bs-target="#exampleModal"onclick="OrderCancel('@Url.Action("CommentCreate", "CustomerCenter", new {id=item.訂單編號 }, Context.Request.Scheme)',null)">我要評論</a>
+                            </td>
+                        }
+                        else
+                        {
+                            <td>
+                            </td>
+                        }
+                        if (item.訂單狀態 == "訂單完成")
+                        {
+                            <td>
+                                <a class="btn btn-outline-danger Cancel" id="Cancel" data-bs-toggle="modal" data-bs-target="#exampleModal"onclick="OrderCancel('@Url.Action("OrderCancel", "CustomerCenter", new {id=item.訂單編號 }, Context.Request.Scheme)',null)">申請取消</a>
+                            </td>
+                        }
+                        else
+                        {
+                            <td>
+                            </td>
+                        }
 
-
-<tr class="樣式">
-                <td>            
-                    @Html.DisplayFor(modelItem => item.訂單編號)
-                </td>
-                <td>
-                    <a type="button" data-bs-toggle="modal" data-bs-target="#ORD" onclick="Odd('@Url.Action("OrderDE", "CustomerCenter", new {id=item.訂單編號 }, Context.Request.Scheme)',null)">@Html.DisplayFor(modelItem => item.商品名稱)</a>
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.訂購日期)
-                </td>
-                <td>
-
-                    @Convert.ToInt32(item.購買金額 * item.數量)
-                </td>
-                <td class="statuss" id="stat" value="@item.訂單狀態">
-                    @Html.DisplayFor(modelItem => item.訂單狀態)
-                </td>
-                @{
-                    if (item.訂單狀態 == "訂單完成" && item.評論狀態 <= 0)
-                    {
-                        <td>
-                            <a class="btn btn-outline-success rv" id="@item.訂單編號" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="OrderCancel('@Url.Action("CommentCreate", "CustomerCenter", new {id=item.訂單編號 }, Context.Request.Scheme)',null)">我要評論</a>
-                        </td>
                     }
-                    else
-                    {
-                        <td>
-                        </td>
-                    }
-                    if (item.訂單狀態 == "訂單完成")
-                    {
-                        <td>
-                            <a class="btn btn-outline-danger Cancel" id="Cancel" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="OrderCancel('@Url.Action("OrderCancel", "CustomerCenter", new {id=item.訂單編號 }, Context.Request.Scheme)',null)">申請取消</a>
-                        </td>
-                    }
-                    else
-                    {
-                        <td>
-                        </td>
-                    }
-                }
 
-            </tr>
+                </tr>
+            }
         }
     </tbody>
 
