--- a/MIST143_Traveler/Views/Shared/_Layout.cshtml
+++ b/MIST143_Traveler/Views/Shared/_Layout.cshtml
@@ -144,11 +144,11 @@
         <div class="secondary-nav">
             <ul class=" drop-down-menu">
                 <li>
-                    <a href="@Url.Content("~/ProductListPage/ProductListHomePage")"><i class="bi bi-geo-alt"></i>探索目的地</a>
+                    <a style="border-radius: 10px" href="@Url.Content("~/ProductListPage/ProductListHomePage")"><i class="bi bi-geo-alt"></i>探索目的地</a>
                 </li>
-                <li><a href="@Url.Content("~/ProductListPage/ProductListHomePage")">全部分類</a></li>
+                <li><a style="border-radius: 10px" href="@Url.Content("~/ProductListPage/ProductListHomePage")">全部分類</a></li>
                 <li>
-                    <a href="@Url.Content("~/ProductListPage/ProductListHomePage")">玩樂</a>  
+                    <a style="border-radius: 10px" href="@Url.Content("~/ProductListPage/ProductListHomePage")">玩樂</a>  
                     <ul>
                         <li><a href="#">景點門票</a></li>
                         <li><a href="#">行程</a></li>
@@ -158,16 +158,16 @@
                         <li><a href="#">娛樂&文化</a></li>
                     </ul>
                 </li>
-                <li><a href="@Url.Content("~/ProductListPage/ProductListHomePage")">美食品嘗</a></li>
+                <li><a style="border-radius: 10px" href="@Url.Content("~/ProductListPage/ProductListHomePage")">美食品嘗</a></li>
                 <li>
-                    <a href="@Url.Content("~/ProductListPage/ProductListHomePage")">住宿</a>
+                    <a style="border-radius: 10px" href="@Url.Content("~/ProductListPage/ProductListHomePage")">住宿</a>
                     <ul>
                         <li><a href="#">飯店</a></li>
                         <li><a href="#">度假專案</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="@Url.Content("~/ProductListPage/ProductListHomePage")">展演活動</a>
+                    <a style="border-radius: 10px" href="@Url.Content("~/ProductListPage/ProductListHomePage")">展演活動</a>
                     <ul>
                         <li><a href="#">全台展演活動</a></li>
                         <li><a href="#">台北展演活動</a></li>
@@ -178,7 +178,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="@Url.Content("~/TransportationPage/TransportationHomePage")">交通</a>
+                    <a style="border-radius: 10px" href="@Url.Content("~/TransportationPage/TransportationHomePage")">交通</a>
                     <ul>
                         <li><a href="#">鐵路</a></li>
                         <li><a href="#">日本鐵路</a></li>
@@ -189,8 +189,8 @@
                         <li><a href="#">渡輪</a></li>
                     </ul>
                 </li>
-                <li><a href="@Url.Content("~/TransportationPage/TransportationHomePage")">租車&接送</a></li>
-                <li><a href="@Url.Content("~/ProductListPage/ProductListHomePage")">探索更多玩法</a></li>
+                <li><a style="border-radius: 10px" href="@Url.Content("~/TransportationPage/TransportationHomePage")">租車&接送</a></li>
+                <li><a style="border-radius: 10px" href="@Url.Content("~/ProductListPage/ProductListHomePage")">探索更多玩法</a></li>
             </ul>
         </div>
     </nav>
