--- a/MIST143_Traveler/Views/ProductListPage2/ProductListPage.cshtml
+++ b/MIST143_Traveler/Views/ProductListPage2/ProductListPage.cshtml
@@ -83,10 +83,10 @@
                         </h2>
                         <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
                             <div class="accordion-body">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="info[]" value="越南" id="flexCheckDefault">
-                                    <label>越南</label>
-                                </div>
+                                               <div class="form-check">
+                                                   <input class="form-check-input flexCheckDefault" type="checkbox" name="info[]" value="越南" id="flexCheckDefault">
+                                                   <label id="c4" value="越南">越南</label>(<span></span>)
+                                               </div>
                             </div>
                         </div>
                     </div>
@@ -100,7 +100,7 @@
                             <div class="accordion-body">
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" name="info[]" value="" id="flexCheckDefault">
-                                    <label>美國</label>
+                                    <label id="c5" value="美國">美國</label>(<span></span>)
                                 </div>
                             </div>
                         </div>
@@ -113,14 +113,14 @@
                         </h2>
                         <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
                             <div class="accordion-body">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="info[]" value="" id="flexCheckDefault" disabled>
-                                    <label>冰島</label>
-                                </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="info[]" value="" id="flexCheckDefault">
-                                    <label>芬蘭</label>
-                                </div>
+                                               <div class="form-check">
+                                                   <input class="form-check-input" type="checkbox" name="info[]" value="" id="flexCheckDefault" disabled>
+                                                   <label id="c6" value="冰島">冰島</label>(<span></span>)
+                                               </div>
+                                               <div class="form-check">
+                                                   <input class="form-check-input" type="checkbox" name="info[]" value="" id="flexCheckDefault">
+                                                   <label id="c7" value="芬蘭">芬蘭</label>(<span></span>)
+                                               </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" name="info[]" value="" id="flexCheckDefault" disabled>
                                     <label>挪威</label>
@@ -211,9 +211,9 @@
 
                                     <input type="date" @*onclick="datechoise()"*@ id="start123123" name="trip-start"
                                            min="2022-10-01" max="2022-12-31" class="ipwidth" />
-                                    <!--<input type="date"--> @*onclick="datechoise()"*@
-                                    <!--id="start" name="trip-start"
-                                min="2022-10-01" max="2022-12-31" class="ipwidth" />-->
+                                    <input type="date" onclick="datechoise()"
+                                    id="start" name="trip-start"
+                                min="" max="2022-12-31" class="ipwidth" />
                                     <button style="width:4%;padding:1%" type="button" id="showw">確定</button>
                                 </div>
 
@@ -306,27 +306,29 @@
             function QQ() {
                 $.get("@Url.Action("getcount", "ProductListPage2")",
                     function (data) {
-                        for (let i of data)
-                        {
-                            for (let q = 1; q < 4; q++)
-                            {
+                        console.log(data)
+                        $(`#c${1}`).next().text(5)
+                        for (let i of data) {
+                            for (let q = 1; q <=7 ; q++) {
+
                                 var s = $(`#c${q}`)
                                 var sb = $(`#c${q}`).next()
-                                if (i.coutryname == s.textContent)
+                                if (i.coutryname == s.html())
                                     sb.text(i.count)
                             }
                         }
-
-                    })
-
+                    }
+                )
             }
 
         $("#showw").click(function () {
             var aa = $("#start123123").val();
+            var dd = $("#start").val();
             var url = "@Url.Content("~/ProductListPage2/selecter")"
             var day = `?date=${aa}`;
+            var day2 = `&date2=${dd}`;
             console.log(aa);
-            $("#ans").load(url + day);
+            $("#ans").load(url + day + day2);
 
         })
 
