--- a/MIST143_Traveler/wwwroot/css/ProductListPage2.css
+++ b/MIST143_Traveler/wwwroot/css/ProductListPage2.css
@@ -75,7 +75,19 @@
             width: 20em;
             text-indent: 3em;
         }
-
+button {
+    font-size: 15px;
+    line-height: 1.44;
+    font-weight: 500;
+    padding: 0 40px;
+    height: 30px;
+    border-radius: 6px;
+    margin-left: 16px;
+    background: #ff5b00;
+    color: #fff;
+    cursor: pointer;
+    border: none;
+}
 .secondary-nav {
     width: 1200px;
     height: 50px;
@@ -624,6 +636,7 @@ a {
     right: 0;
     top: 50%;
     width: 8em;
+  
     margin-top: -2.5em;
 }
 
