--- a/MIST143_Traveler/wwwroot/css/LOGIN.css
+++ b/MIST143_Traveler/wwwroot/css/LOGIN.css
@@ -1,7 +1,8 @@
 ﻿@import url('https://fonts.googleapis.com/css?family=Numans');
 
 html, body {
-    background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');
+    /*background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');*/
+    background-image: url('/Images/contact/544750.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
